# gpui-symbols

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: basic.rs
gpui-sfsymbols/: Cargo.toml
gpui-sfsymbols/src/: lib.rs
sfsymbols/: Cargo.toml  README.md
sfsymbols-codegen/: Cargo.toml  README.md
sfsymbols-codegen/src/: main.rs
sfsymbols/src/: lib.rs  unified.rs  v1.rs  v1_0.rs  v1_1.rs  v2.rs  v2_0.rs  v2_1.rs  v2_2.rs  v3.rs  v3_0.rs  v3_1.rs  v3_2.rs  v3_3.rs  v4.rs  v4_0.rs  v4_1.rs  v4_2.rs  v5.rs  v5_0.rs  v5_1.rs  v5_2.rs  v5_3.rs  v5_4.rs  v6.rs  v6_0.rs  v6_1.rs  v6_2.rs  v6_3.rs  v6_4.rs  v7.rs  v7_0.rs  v7_1.rs
src/: icon.rs  lib.rs  symbol.rs
src/platform/: macos.rs  mod.rs
