[package]
name = "gpui-symbols"
version = "0.2.0"
description = "SF Symbols rendering for GPUI"
authors = ["AprilNEA <dev@aprilnea.com> (https://aprilnea.me)"]
documentation = "https://docs.rs/gpui-symbols"
homepage = "https://gpui.dev"
repository = "https://github.com/AprilNEA/gpui-symbols"
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
name = "gpui_symbols"
path = "src/lib.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["component"]

[features]
default = ["component", "presets"]
gpui = ["dep:gpui", "dep:smallvec", "dep:image"]
component = ["gpui"]
presets = ["dep:sfsymbols", "sfsymbols/all"]

[dependencies]
gpui = { version = "0.2.2", default-features = false, optional = true }
smallvec = { version = "1.13", optional = true }
image = { version = "0.25", optional = true }
sfsymbols = { path = "sfsymbols", default-features = false, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
